[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy>=1.25.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "cybotrade-indicators"
version = "0.0.3"
authors = [
    { name = "Marcus Lee", email = "marcuslee@balaenaquant.com" },
    { name = "Lee Ze Lim", email = "zelim@balaenaquant.com" },
]
description = "This library provides a set of technical analysis indicators that can be used to craft trading strategies."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: C",
    "Programming Language :: Python :: 3.11",
    "Typing :: Typed",
]
dependencies = ["numpy>=1.25.0", "nptyping>=2.5.0"]

[project.urls]
Homepage = "https://app.cybotrade.rs"
Documentation = "https://docs.cybotrade.rs"
Repository = "https://github.com/cybotrade/cybotrade-indicators"

[mypy]
plugins = "numpy.typing.mypy_plugin"
